syntax = "proto3";
option csharp_namespace = "PostsService.Protos";

service PostsService {
	rpc Create(CreateRequest) returns (CreateResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);
	rpc Update(UpdateRequest) returns (UpdateResponse);
	rpc Get(GetRequest) returns (GetResponse);
	rpc GetMany(GetManyRequest) returns (GetManyResponse);
}

message Post {
	string id  = 1;
	string code = 2;
	string name = 3;
	string river = 4;
}


message CreateRequest {
	string code = 1;
	string name = 2;
	string river = 3;
}

message CreateResponse {
	Post post = 1;
}


message DeleteRequest {
	string id = 1;
}

message DeleteResponse {
	Post post = 1;
}


message UpdateRequest {
	Post post = 1; 
}

message UpdateResponse {
	Post post = 1; 
}


message GetRequest {
    string id = 1;
}

message GetResponse {
	Post post = 1; 
}


message GetManyRequest {
	uint32 page_number = 1;
	string substring = 2;
}

message GetManyResponse {
	repeated Post posts = 1;
	uint32 page_number = 2;
	uint32 max_page_number = 3;
}















